# ghidrasql

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  install-prompt.md
.github/workflows/: ci.yml
prompts/: ghidrasql_agent.md
src/cli/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/lib/include/ghidrasql/: ghidrasql.hpp  source.hpp
src/lib/src/: commands.cpp  database.cpp  entities_detail.cpp  entities_tables.cpp  entities_views.cpp  functions.cpp  http.cpp  source.cpp  source_callbacks.cpp  source_libghidra.cpp
src/lib/src/internal/: entities.hpp  entities_detail.hpp  functions.hpp
